# ebayes

./: .env.example  .gitignore  README.md  build.sh  copy_codebase.ps1  copy_codebase.sh  pyproject.toml  replace_classes_to_daisyui.py  requirements.txt  start.sh
a_core/: settings.py  urls.py
b_mmm/: admin.py  apps.py  forms.py  models.py  plotting.py  tests.py  urls.py  utils.py  views.py
b_mmm/migrations/: 0001_initial.py  0002_csvfile_column_names_delete_csvdata.py  0003_alter_csvfile_id.py  0004_rename_upload_date_csvfile_created_at_and_more.py  0005_remove_csvfile_column_names_csvfile_date_column_and_more.py  0006_alter_csvfile_options_csvfile_currency.py  0007_csvfile_predictor_currencies.py  0008_remove_csvfile_currency_and_more.py  0009_marketingmixmodel.py  0010_alter_marketingmixmodel_model_type.py  0011_marketingmixmodel_trace_plot.py  0012_alter_marketingmixmodel_trace_plot.py  0013_marketingmixmodel_parameter_posteriors_plot.py  0014_marketingmixmodel_y_posterior_predictive_plot.py  0015_remove_marketingmixmodel_model_type.py  0016_marketingmixmodel_trace_binary_and_more.py  0017_marketingmixmodel_mmm_model_binary.py  0018_remove_marketingmixmodel_mmm_model_binary.py  0019_marketingmixmodel_error_percent_binary_and_more.py  0020_alter_marketingmixmodel_parameters_and_more.py  0021_marketingmixmodel_state.py  0022_remove_marketingmixmodel_error_percent_binary_and_more.py  0023_csvfile_cleaned_data_file.py  (+1 more)
node/: package-lock.json  package.json  tailwind.config.js
static/css/: style.css
staticfiles/: staticfiles.json
templates/: base.html
(+14 files in other folders)
